# cpp23VcpkgVSCodeTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  helloworld.cpp  vcpkg-configuration.json
.devcontainer/: devcontainer.json
src/: main.cpp  mathutil.cpp  mathutil.h
test/: test_mathutil.cpp
